Add utilisateur model

--- a/server/model-config.json
+++ b/server/model-config.json
@@ -39,5 +39,9 @@
   "CoffeeShop": {
     "dataSource": "postgres",
     "public": true
+  },
+  "Utilisateur": {
+    "dataSource": "postgres",
+    "public": true
   }
 }
