Add UserLocation model on remote server.

--- a/server/model-config.json
+++ b/server/model-config.json
@@ -44,5 +44,9 @@
   "Utilisateur": {
     "dataSource": "postgres",
     "public": true
+  },
+  "UserLocation": {
+    "dataSource": "postgres",
+    "public": true
   }
 }
